ModernRozaUi shell, LegacyRozaUi rename, Gradle, docs